--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,15 +10,17 @@ lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
 composeBom = "2025.11.00"
 
+coreSplashscreen = "1.2.0"
+
+
 hilt = "2.57.2"
 hilt-compiler-androidx = "1.3.0"
 
 # Navigation
 navigation-compose = "2.9.6"
-firebaseAuthKtx = "24.0.1"
 
 
-firebase-bom = "32.7.0"
+firebase-bom = "34.6.0"
 playServicesAuth = "21.4.0"
 googleid = "1.1.1"
 
@@ -42,6 +44,9 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+
 
 # Hilt - Dependency Injection
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
